@@ -3,11 +3,9 @@ package com.chatbotapp.chatbotapp.controllers;
 import com.chatbotapp.chatbotapp.converters.MessageConverter;
 import com.chatbotapp.chatbotapp.dto.message.MessageCreationDTO;
 import com.chatbotapp.chatbotapp.dto.message.MessageDTO;
-import com.chatbotapp.chatbotapp.models.ChatRoom;
-import com.chatbotapp.chatbotapp.models.Message;
 import com.chatbotapp.chatbotapp.services.MessagesService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Controller;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
@@ -22,6 +20,7 @@ import java.util.stream.Collectors;
 public class MessagesController {
     private final MessagesService messagesService;
     private final MessageConverter messageConverter;
+    private final SimpMessagingTemplate messagingTemplate;
 
     @GetMapping("/{messageId}")
     public MessageDTO findById(@PathVariable Long messageId) {
@@ -33,9 +32,17 @@ public class MessagesController {
         return messageConverter.toMessageDTO(messagesService.createMessage(messageCreationDTO));
     }
 
+    @PostMapping("/get-response-for-message")
+    public MessageDTO getResponseForMessage(@RequestBody MessageCreationDTO messageCreationDTO){
+        return messageConverter.toMessageDTO(messagesService.createResponseForMessage(messageCreationDTO));
+    }
+
     @GetMapping("/all-for-room/{roomId}")
     public List<MessageDTO> getAllMessagesForRoom(@PathVariable Long roomId) {
-        return messagesService.getAllMessagesForRoom(roomId).stream().map(messageConverter::toMessageDTO).collect(Collectors.toList());
+        List<MessageDTO> messageDTOS = messagesService.getAllMessagesForRoom(roomId).stream().map(messageConverter::toMessageDTO).toList();
+        messagingTemplate.convertAndSend("/topic/room/" + roomId, messageDTOS);
+
+        return messageDTOS;
     }
 
     @GetMapping("/all-for-user/{userId}")
